--- a/00_exploration.ipynb
+++ b/00_exploration.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,13 +143,13 @@
        "4  Making somebody happy is a question of give an...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/small_spotify.csv\")\n",
+    "df = pd.read_csv(\"data/57k_spotify_songs.csv\")\n",
     "df.head()"
    ]
   },
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
        "(57650, 4)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "freq                                                    6  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,17 +312,17 @@
     {
      "data": {
       "text/plain": [
-       "9750     Michael wakes you up with sweets  \\nHe takes y...\n",
-       "9411     Josie works the counter at the downtown five a...\n",
-       "15643    Well you can tell the world about this  \\nYou ...\n",
-       "14517    Am privit-o in ochi ultima oara  \\nLacrimile c...\n",
-       "12646    Tell your honey  \\nLiving all alone  \\n?  \\nI ...\n",
+       "8368     [Verse:]  \\nWhatever it takes, whatever Your w...\n",
+       "26601    Well she drew out all her money from the south...\n",
+       "34690    Introducing..Tre' Cool..  \\nHi!..um..I wrote t...\n",
+       "1277     Where are you ? I love you . Where are you ? I...\n",
+       "22875    Funny how everything changes for me  \\nMemorie...\n",
        "                               ...                        \n",
-       "56868    'Cause it was signal, 'cause it was found  \\n'...\n",
-       "2525     Behind the door of every house,  \\nIn every st...\n",
-       "3477     They paved paradise  \\nAnd put up a parking lo...\n",
-       "23092    Once, did you want to belong  \\nTo somewhere a...\n",
-       "15364    Well it's Christmas time, and I'm warm inside ...\n",
+       "4181     Tak tertahan Berdiam diri... sakit  \\nSementar...\n",
+       "18723    Get down deeper and down  \\nDown down deeper a...\n",
+       "10157    You're such a poet  \\nI wish I could be Wesley...\n",
+       "16484    [Jessica Rivera]  \\n\"Hmmm, so you're the one t...\n",
+       "40079    Baby when I met you there was peace unknown  \\...\n",
        "Name: text, Length: 100, dtype: object"
       ]
      },
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "       'Zazie'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data/small_spotify_with_lang.csv\", index=False)"
+    "df.to_csv(\"data/cache/57k_spotify_songs.csv\", index=False)"
    ]
   },
   {
@@ -689,7 +689,7 @@
    "outputs": [],
    "source": [
     "# Saving the results\n",
-    "filtered_df.to_csv(\"data/filtered_small_spotify_with_lang.csv\", index=False)"
+    "filtered_df.to_csv(\"data/cache/sample.csv\", index=False)"
    ]
   },
   {
@@ -2101,8 +2101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_df.to_csv(\"data/filtered_small_spotify_with_lang_and_embedding.csv\", index=False) \n",
-    "filtered_df.to_json(\"data/filtered_small_spotify_with_lang_and_embedding.json\", orient=\"records\")     "
+    "filtered_df.to_csv(\"data/cache/sample_with_lang_and_embedding.csv\", index=False) \n",
+    "#filtered_df.to_json(\"data/cache/sample_with_lang_and_embedding.json\", orient=\"records\")     "
    ]
   },
   {
