--- a/01_embedding.ipynb
+++ b/01_embedding.ipynb
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"data/small_spotify.csv\")\n",
+    "df = pd.read_csv(\"data/57k_spotify_songs.csv\")\n",
     "df.head()"
    ]
   },
@@ -234,13 +234,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -322,16 +315,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data/all_embedding.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_json(\"data/all_embedding.json\")"
+    "df.to_csv(\"data/cache/57k_spotify_songs_with_embeddings.csv\", index=False)\n",
+    "df.to_json(\"data/cache/57k_spotify_songs_with_embeddings.json\")"
    ]
   },
   {
@@ -441,7 +426,7 @@
     }
    ],
    "source": [
-    "df_loaded = pd.read_csv(\"data/all_embedding.csv\")\n",
+    "df_loaded = pd.read_csv(\"data/cache/57k_spotify_songs_with_embeddings.csv\")\n",
     "df_loaded.head()"
    ]
   },
