--- a/02_filtering.ipynb
+++ b/02_filtering.ipynb
@@ -116,7 +116,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('data/all_embedding.csv')\n",
+    "df = pd.read_csv(\"data/cache/57k_spotify_songs_with_embeddings.csv\")\n",
     "df.head()"
    ]
   },
@@ -3488,7 +3488,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_filtered_with_theme.drop(\"link\", axis=1).to_json('data/train_test.json', index=False)"
+    "df_filtered_with_theme.drop(\"link\", axis=1).to_csv('data/test.json', index=False)\n",
+    "#df_filtered_with_theme.drop(\"link\", axis=1).to_json('data/test.json', index=False)"
    ]
   },
   {
