Update link save

--- a/00_exploration.ipynb
+++ b/00_exploration.ipynb
@@ -572,7 +572,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"data/cache/57k_spotify_songs.csv\", index=False)"
+    "df.to_csv(\"data/57k_spotify_songs.csv\", index=False)"
    ]
   },
   {
